// sd-mail-service — database schema
// Paste into https://dbdiagram.io to render the ERD.

Project sd_mail_service {
  database_type: 'PostgreSQL'
  Note: 'Standalone multi-product notification service'
}

Enum channel { email slack in_app sms }
Enum run_status { active canceled completed failed }
Enum message_status { queued sent delivered bounced complained failed suppressed }
Enum step_type { send delay cancel_on repeat }
Enum pref_status { subscribed unsubscribed }
Enum suppression_reason { hard_bounce complaint unsubscribe manual }
Enum message_type { transactional marketing }   // transactional = required mail; bypasses opt-out/unsubscribe (see 11-security)

Table products {
  id uuid [pk]
  slug varchar [unique, not null]
  name varchar [not null]
  brand_name varchar
  brand_color varchar
  logo_url varchar
  from_email varchar [not null]
  reply_to_email varchar
  layout_html text
  created_at timestamp
  updated_at timestamp
}

Table subscribers {
  id uuid [pk]
  product_id uuid [ref: > products.id, not null]
  external_id varchar [not null]
  email varchar
  name varchar
  attributes jsonb
  timezone varchar
  last_seen_at timestamp
  created_at timestamp
  updated_at timestamp
  Indexes { (product_id, external_id) [unique] }
}

Table subscriber_preferences {
  id uuid [pk]
  subscriber_id uuid [ref: > subscribers.id, not null]
  category varchar [not null]
  channel channel [not null]
  status pref_status [not null, default: 'subscribed']
  updated_at timestamp
  Indexes { (subscriber_id, category, channel) [unique] }
}

Table event_log {
  id uuid [pk]
  product_id uuid [ref: > products.id, not null]
  event_key varchar [not null]
  idempotency_key varchar [not null]
  subscriber_id uuid [ref: > subscribers.id]
  occurred_at timestamp
  received_at timestamp
  data jsonb
  Indexes { (product_id, idempotency_key) [unique] }
}

Table workflows {
  id uuid [pk]
  product_id uuid [ref: > products.id, not null]
  key varchar [not null]
  name varchar [not null]
  trigger_event_key varchar [not null]
  category varchar [not null]
  audience varchar [not null]
  active_version_id uuid
  enabled boolean [default: true]
  created_at timestamp
  updated_at timestamp
  Indexes { (product_id, key) [unique] }
}

Table workflow_versions {
  id uuid [pk]
  workflow_id uuid [ref: > workflows.id, not null]
  version int [not null]
  steps jsonb [not null]
  created_by uuid [ref: > admin_users.id]
  created_at timestamp
  Indexes { (workflow_id, version) [unique] }
}

Table templates {
  id uuid [pk]
  product_id uuid [ref: > products.id, not null]
  key varchar [not null]                    // referenced by a send step's "template"
  type message_type [not null, default: 'marketing']
  channel channel [not null, default: 'email']
  subject text
  body text
  cta jsonb
  updated_at timestamp
  Indexes { (product_id, key) [unique] }
}

Table workflow_runs {
  id uuid [pk]
  workflow_id uuid [ref: > workflows.id, not null]
  workflow_version_id uuid [ref: > workflow_versions.id]
  subscriber_id uuid [ref: > subscribers.id, not null]
  trigger_event_id uuid [ref: > event_log.id]
  status run_status [not null, default: 'active']
  cancel_on jsonb
  created_at timestamp
  completed_at timestamp
  Indexes { (workflow_id, subscriber_id, status) }
}

Table run_steps {
  id uuid [pk]
  run_id uuid [ref: > workflow_runs.id, not null]
  step_index int [not null]
  step_type step_type [not null]
  scheduled_for timestamp
  job_id varchar
  executed_at timestamp
  Indexes { (run_id, step_index) [unique] }
}

Table messages {
  id uuid [pk]
  product_id uuid [ref: > products.id, not null]
  type message_type [not null]              // transactional vs marketing (drives suppression/footer)
  to_email varchar [not null]               // actual recipient; supports raw transactional sends + suppression key
  subscriber_id uuid [ref: > subscribers.id]  // nullable: transactional sends may have no subscriber (e.g. signup OTP)
  run_id uuid [ref: > workflow_runs.id]
  run_step_id uuid [ref: > run_steps.id]    // idempotency anchor for scheduled sends (unique)
  campaign_id uuid [ref: > campaigns.id]    // set for marketing-campaign sends
  template_id uuid [ref: > templates.id]
  channel channel [not null]
  provider_message_id varchar
  status message_status [not null, default: 'queued']
  error text
  sent_at timestamp
  created_at timestamp
  Indexes {
    (subscriber_id, created_at)
    run_step_id [unique]                     // one message per scheduled step (no double-send on retry)
    (campaign_id, subscriber_id) [unique]    // one message per campaign recipient
  }
}

Table campaigns {
  id uuid [pk]
  product_id uuid [ref: > products.id, not null]
  name varchar [not null]
  template_id uuid [ref: > templates.id]     // a saved marketing template, or inline subject/body below
  category varchar [not null, default: 'marketing']
  subject text
  body text
  cta jsonb
  audience jsonb                             // { all: true } — the product's whole subscriber base (v1)
  status varchar [not null, default: 'queued']  // draft | queued | sending | sent | failed
  total_recipients int [not null, default: 0]
  sent_count int [not null, default: 0]
  failed_count int [not null, default: 0]
  suppressed_count int [not null, default: 0]
  created_by uuid [ref: > admin_users.id]
  created_at timestamp
  completed_at timestamp
}

Table suppressions {
  id uuid [pk]
  product_id uuid [ref: > products.id]
  email varchar [not null]
  reason suppression_reason [not null]
  created_at timestamp
  Indexes { (product_id, email, reason) [unique] }   // one row per reason so hard_bounce coexists with unsubscribe/complaint
}

// Superadmins — full access to all products. No RBAC/roles (single admin type).
Table admin_users {
  id uuid [pk]
  email varchar [unique, not null]
  name varchar
  password_hash varchar
  created_at timestamp
}
